# fastapi-backend-template

./: .env.example  Makefile  README.md  docker-compose.yml
.github/workflows/: tests.yml
backend/: Dockerfile  Makefile  pyproject.toml
backend/scripts/: entrypoint.sh  run.sh
backend/src/: cli.py
backend/src/api/app/: app.py
backend/src/api/config/: database.py  settings.py
backend/src/api/controller/http/: router.py
backend/src/api/controller/http/v1/: __init__.py  author.py  book.py  category.py  tag.py
backend/src/api/dto/: author.py  book.py  catefory.py  tag.py
backend/src/api/entity/: __init__.py  author.py  base_table.py  book.py  category.py  tag.py
backend/src/api/misc/: dependencies.py  exception_handlers.py
backend/src/migrations/: alembic.ini  env.py  migrations.py
backend/src/migrations/versions/: 7f4728facb13_init.py  9326b189ecca_rm_unique.py  ba3f769e7a4c_init.py
backend/tests/: conftest.py
backend/tests/fixtures/api/: client.py
backend/tests/fixtures/core/: core.py
backend/tests/fixtures/data/: data.py
backend/tests/scenarios/: populate_db.py
backend/tests/test_api/tag/: test_tag.py
