[tool.poetry]
name = "fastapi-backend-template"
description = "fastapi-backend-template"
version = "0.1.0"
authors = ["yar-jul"]
packages = [
    { include = "api", from = "src" },
    { include = "migrations", from = "src" },
    { include = "cli.py", from = "src" }
]
include = [
    "src/migrations/alembic.ini",
    "src/migrations/script.py.mako"
]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.27.0"
alembic = "^1.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
isort = "^5.11.4"
black = "^22.12.0"

[tool.isort]
profile = "black"

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = "tests/"

[tool.poetry.scripts]
apicli = "cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
